--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -18,9 +18,9 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^8.4.7",
-    "@nestjs/core": "^8.4.7",
-    "@nestjs/platform-express": "^8.4.7",
+    "@nestjs/common": "^8.4.0",
+    "@nestjs/core": "^8.4.0",
+    "@nestjs/platform-express": "^8.4.0",
     "class-validator": "^0.13.2",
     "nedb": "^1.8.0",
     "reflect-metadata": "^0.1.13",
@@ -28,22 +28,21 @@
     "rxjs": "^7.5.5"
   },
   "devDependencies": {
-    "@nestjs/cli": "^8.2.6",
-    "@nestjs/schematics": "^8.0.11",
-    "@nestjs/testing": "^8.4.7",
-    "@types/express": "^4.17.13",
-    "@types/jest": "28.1.3",
-    "@types/node": "^18.0.0",
-    "@types/supertest": "^2.0.12",
+    "@nestjs/cli": "^8.2.2",
+    "@nestjs/schematics": "^8.0.8",
+    "@nestjs/testing": "^8.4.0",
+    "@types/express": "^4.17.8",
+    "@types/jest": "27.4.1",
+    "@types/node": "^17.0.21",
+    "@types/supertest": "^2.0.11",
     "class-transformer": "^0.5.1",
-    "jest": "^28.1.1",
-    "nanoid": "^4.0.0",
-    "source-map-support": "^0.5.21",
-    "supertest": "^6.2.3",
-    "ts-jest": "^28.0.5",
-    "ts-loader": "^9.3.0",
-    "ts-node": "^10.8.1",
-    "tsconfig-paths": "^4.0.0"
+    "jest": "27.5.1",
+    "nanoid": "^3.3.1",
+    "supertest": "^6.2.2",
+    "ts-jest": "27.1.3",
+    "ts-loader": "^9.2.8",
+    "ts-node": "10.7.0",
+    "tsconfig-paths": "^3.13.0"
   },
   "jest": {
     "moduleFileExtensions": [
